# Compiladores-Labs

Exam2/: CMakeLists.txt  exp.cpp  exp.h  input1.txt  main.cpp  parser.cpp  parser.h  scanner.cpp  scanner.h  token.cpp  token.h  visitor.cpp  visitor.h
Lab01/: lab1 - sol.cpp
Lab03/: lab3.cpp
Lab04/: input.txt  lab4.cpp
Lab06/: readme.txt
Lab07/: lab7.cpp  lab7sol2.cpp
Lab08/: CMakeLists.txt  exp.cpp  exp.h  input1.txt  main.cpp  parser.cpp  parser.h  scanner.cpp  token.cpp  token.h  visitor.cpp  visitor.h
Lab09/: CMakeLists.txt  exp.cpp  exp.h  parser.cpp  parser.h  scanner.cpp  token.cpp  token.h  visitor.cpp  visitor.h
Lab10/: CMakeLists.txt  exp.cpp  exp.h  input2.txt  parser.cpp  parser.h  scanner.cpp  scanner.h  token.cpp  token.h  visitor.cpp  visitor.h
Lab11/: CMakeLists.txt  environment.h  exp.cpp  exp.h  input4.txt  main.cpp  parser.cpp  parser.h  scanner.h  (+3 more)
Lab13/: CMakeLists.txt  exp.cpp  exp.h  input4.txt  main.cpp  parser.cpp  token.h  visitor.cpp  visitor.h
Lab17/: CMakeLists.txt  exp.cpp  exp.h  input.txt  main.cpp  output.s  parser.cpp  parser.h  scanner.cpp  scanner.h  token.cpp  visitor.cpp  visitor.h
Lab19/: CMakeLists.txt  exp.cpp  exp.h  main.cpp  make.py  parser.cpp  scanner.cpp  token.cpp  token.h  visitor.cpp  visitor.h
Lab19/inputs/: input1.s  input10.txt  input2.txt  input3.txt  input4.txt  input6.s  input6.txt  input7.txt  input8.txt  input9.txt
Lab19/inputs/TestCases/: input1.txt  input10.txt  input5.txt  input7.txt
MiniProyecto/: CMakeLists.txt  environment.hh  exp.cpp  exp.h  gencode.cpp  gencode.hh  imp_interpreter.cpp  imp_interpreter.hh  imp_type.cpp  imp_type.hh  imp_value.cpp  imp_value.hh  imp_value_visitor.hh  main.cpp  parser.cpp  parser.h  scanner.cpp  token.cpp  token.h  type_visitor.hh  visitor.cpp  visitor.h
(+99 files in other folders)
